--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<version>1.18.28</version> <!-- Check for the latest version -->
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+
 
 	</dependencies>
 
